[gd_scene load_steps=6 format=2]

[ext_resource path="res://CertaFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://LineCell.gd" type="Script" id=2]
[ext_resource path="res://Resources/icons/trash.svg" type="Texture" id=3]
[ext_resource path="res://Resources/icons/arrow-top.svg" type="Texture" id=4]
[ext_resource path="res://Resources/icons/arrow-bottom.svg" type="Texture" id=5]

[node name="ColorRect" type="ColorRect"]
margin_right = 1600.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 2.0
margin_right = -4.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameText" type="LineEdit" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="PhraseText" type="LineEdit" parent="HBoxContainer"]
margin_left = 154.0
margin_right = 1479.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
placeholder_alpha = 0.33
caret_blink = true
caret_blink_speed = 0.5

[node name="EditControl" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 1483.0
margin_right = 1592.0
margin_bottom = 29.0

[node name="UpBtn" type="Button" parent="HBoxContainer/EditControl"]
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 0 )
icon = ExtResource( 4 )
expand_icon = true

[node name="DownBtn" type="Button" parent="HBoxContainer/EditControl"]
margin_left = 33.0
margin_right = 62.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 0 )
icon = ExtResource( 5 )
expand_icon = true

[node name="Control" type="Control" parent="HBoxContainer/EditControl"]
margin_left = 66.0
margin_right = 76.0
margin_bottom = 29.0
rect_min_size = Vector2( 10, 0 )

[node name="DelBtn" type="Button" parent="HBoxContainer/EditControl"]
margin_left = 80.0
margin_right = 109.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 0 )
icon = ExtResource( 3 )
expand_icon = true
[connection signal="focus_entered" from="HBoxContainer/NameText" to="." method="_on_NameText_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/NameText" to="." method="_on_NameText_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/NameText" to="." method="_on_NameText_text_changed"]
[connection signal="focus_entered" from="HBoxContainer/PhraseText" to="." method="_on_NameText_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/PhraseText" to="." method="_on_PhraseText_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/PhraseText" to="." method="_on_PhraseText_text_changed"]
[connection signal="pressed" from="HBoxContainer/EditControl/UpBtn" to="." method="_on_UpBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditControl/DownBtn" to="." method="_on_DownBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditControl/DelBtn" to="." method="_on_DelBtn_pressed"]
